--- a/App24/app/src/main/res/layout/fragment_most_viewed.xml
+++ b/App24/app/src/main/res/layout/fragment_most_viewed.xml
@@ -17,11 +17,19 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <android.support.v7.widget.RecyclerView
+            <!--<android.support.v7.widget.RecyclerView-->
+            <!--android:id="@+id/most_viewed_feeds"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_marginTop="20dp"/>-->
+            <com.github.yasevich.endlessrecyclerview.EndlessRecyclerView
                 android:id="@+id/most_viewed_feeds"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="20dp"/>
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent" android:layout_height="match_parent"
+                android:layout_marginTop="20dp"
+                android:clipToPadding="false"
+                android:orientation="vertical"
+                android:scaleType="fitXY"/>
 
 
         </android.support.v4.widget.SwipeRefreshLayout>
