--- a/App24/app/src/main/res/layout/grid_item_view.xml
+++ b/App24/app/src/main/res/layout/grid_item_view.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:src="@drawable/color_camera"
+            android:src="@drawable/video_icon_blue"
             android:visibility="gone"/>
     </RelativeLayout>
 
