--- a/App24/app/src/main/res/layout/view_edit_menus.xml
+++ b/App24/app/src/main/res/layout/view_edit_menus.xml
@@ -28,7 +28,7 @@
             android:background="@color/text_background_deselect"
             android:gravity="center_vertical|left"
             android:paddingLeft="5dp"
-            android:text="@string/edit_post"/>
+            android:text="@string/edit_feed"/>
         <View
             android:id="@+id/seperator"
             android:layout_width="match_parent"
@@ -46,6 +46,6 @@
             android:background="@color/text_background_deselect"
             android:gravity="center_vertical|left"
             android:paddingLeft="5dp"
-            android:text="@string/delete_post"/>
+            android:text="@string/delete_feed"/>
     </RelativeLayout>
 </RelativeLayout>
