--- a/App24/app/src/main/res/layout/view_profit_and_feeds_with_image.xml
+++ b/App24/app/src/main/res/layout/view_profit_and_feeds_with_image.xml
@@ -9,120 +9,113 @@
         layout="@layout/view_user_profit_details"
         android:visibility="gone"/>
     <RelativeLayout
-        android:id="@+id/layout_heading"
+        android:id="@+id/main_frame_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/view_profit_and_feeds"
-        android:paddingLeft="@dimen/main_screen_padding"
-        android:paddingRight="@dimen/main_screen_padding"
-        android:paddingTop="@dimen/main_screen_padding">
-
-        <TextView
-            android:id="@+id/txt_feed_heading"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:maxLines="2"
-            android:text="@string/chinese_lorem_ipsum_title"
-            android:textColor="@color/black"
-            android:textSize="@dimen/feed_heading_text"
-            android:textStyle="bold"/>
-
-    </RelativeLayout>
-
-
-    <RelativeLayout
-        android:id="@+id/layout_feed_details"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/layout_heading"
-        android:layout_marginTop="10dp"
-        android:padding="@dimen/main_screen_padding">
-
-        <TextView
-            android:id="@+id/txt_creator"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:text="@string/creator_name"
-            android:textColor="@color/text_small_blue"
-            android:textSize="@dimen/grey_heading_text"/>
-
-        <TextView
-            android:id="@+id/txt_created_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/txt_creator"
-            android:paddingLeft="5dp"
-            android:text="@string/created_time"
-            android:textColor="@color/text_small_blue"
-            android:textSize="@dimen/grey_heading_text"/>
-
-        <TextView
-            android:id="@+id/txt_profile_count_login_user"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:paddingBottom="10dp"
-            android:text="@string/profile_count_login_user"
-            android:textColor="@color/text_small_blue"
-            android:textSize="@dimen/grey_heading_text"/>
-    </RelativeLayout>
-
-    <LinearLayout
-        android:id="@+id/layout_feed_body"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/layout_feed_details"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
         android:padding="@dimen/main_screen_padding">
         <RelativeLayout
+            android:id="@+id/layout_heading"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_height="wrap_content">
+
             <TextView
-                android:id="@+id/txt_feed_body"
+                android:id="@+id/txt_feed_heading"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:gravity="center_vertical|left"
-                android:lineSpacingMultiplier="1.2"
-                android:maxLines="5"
-                android:text="@string/chinese_lorem_ipsum"
-                android:textSize="@dimen/feed_body_text"/>
+                android:layout_height="wrap_content"
+                android:maxLines="2"
+                android:text="@string/chinese_lorem_ipsum_title"
+                android:textColor="@color/black"
+                android:textSize="@dimen/feed_heading_text"
+                android:textStyle="bold"/>
+
         </RelativeLayout>
+
+
         <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_weight="1.2"
-            android:gravity="center">
+            android:id="@+id/layout_feed_details"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/layout_heading"
+            android:layout_marginTop="10dp"
+            android:paddingRight="@dimen/main_screen_padding">
 
-            <FrameLayout
-                android:id="@+id/progress_dialog"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/txt_creator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:text="@string/creator_name"
+                android:textColor="@color/text_small_blue"/>
 
-                <ProgressBar android:layout_width="wrap_content"
-                             android:layout_height="wrap_content"
-                             android:layout_gravity="center"/>
+            <TextView
+                android:id="@+id/txt_created_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/txt_creator"
+                android:paddingLeft="5dp"
+                android:text="@string/created_time"
+                android:textColor="@color/text_small_blue"/>
+
+            <TextView
+                android:id="@+id/txt_profile_count_login_user"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:paddingBottom="10dp"
+                android:text="@string/profile_count_login_user"
+                android:textColor="@color/text_small_blue"/>
+        </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/layout_feed_body"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/layout_feed_details"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+                <TextView
+                    android:id="@+id/txt_feed_body"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:gravity="center_vertical|left"
+                    android:lineSpacingMultiplier="1.2"
+                    android:maxLines="5"
+                    android:text="@string/chinese_lorem_ipsum"
+                    android:textSize="@dimen/feed_body_text"/>
+            </RelativeLayout>
+
+
+            <RelativeLayout
+                android:id="@+id/progress_dialog_layout"
+                android:layout_width="0dp"
+                android:layout_height="120dp"
+                android:layout_marginLeft="10dp"
+                android:layout_weight=".8"
+                android:gravity="center">
+
+
+                <ProgressBar
+                    android:id="@+id/progress_dialog"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"/>
 
                 <ImageView
                     android:id="@+id/img_preview"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
+                    android:layout_height="200dp"
+                    android:scaleType="centerCrop"
                     />
-            </FrameLayout>
 
 
-            <RelativeLayout
-                android:id="@+id/layout_img_video_preview"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_centerInParent="true">
                 <!--<VideoView-->
                 <!--android:id="@+id/video"-->
                 <!--android:layout_width="match_parent"-->
@@ -140,173 +133,24 @@
 
 
             </RelativeLayout>
-        </RelativeLayout>
-    </LinearLayout>
+        </LinearLayout>
 
-    <TextView
-        android:id="@+id/txt_seen"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/layout_feed_body"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
-        android:drawableLeft="@drawable/seen"
-        android:drawablePadding="5dp"
-        android:padding="@dimen/main_screen_padding"
-        android:text="3,027"
-        android:textSize="@dimen/grey_heading_text"/>
+        <TextView
+            android:id="@+id/txt_seen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/layout_feed_body"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:drawableLeft="@drawable/seen"
+            android:drawablePadding="5dp"
+            android:text="3,027"
+            android:textSize="12dp"/>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@+id/txt_seen"
-        android:background="@color/view_color"/>
-    <!--<RelativeLayout-->
-    <!--android:id="@+id/layout_heading"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@+id/view_profit_and_feeds"-->
-    <!--android:paddingLeft="@dimen/main_screen_padding"-->
-    <!--android:paddingRight="@dimen/main_screen_padding"-->
-    <!--android:paddingTop="@dimen/main_screen_padding">-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/txt_feed_heading"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:maxLines="2"-->
-    <!--android:text="@string/chinese_lorem_ipsum_title"-->
-    <!--android:textColor="@color/black"-->
-    <!--android:textSize="@dimen/feed_heading_text"-->
-    <!--android:textStyle="bold"/>-->
-
-    <!--</RelativeLayout>-->
-
-
-    <!--<RelativeLayout-->
-    <!--android:id="@+id/layout_feed_details"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@+id/layout_heading"-->
-    <!--android:layout_marginTop="10dp"-->
-    <!--android:paddingLeft="@dimen/main_screen_padding"-->
-    <!--android:paddingRight="@dimen/main_screen_padding">-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/txt_creator"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_alignParentLeft="true"-->
-    <!--android:text="@string/creator_name"-->
-    <!--android:textColor="@color/text_small_blue"/>-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/txt_created_time"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_toRightOf="@+id/txt_creator"-->
-    <!--android:paddingLeft="5dp"-->
-    <!--android:text="@string/created_time"-->
-    <!--android:textColor="@color/text_small_blue"/>-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/txt_profile_count_login_user"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_alignParentRight="true"-->
-    <!--android:paddingBottom="10dp"-->
-    <!--android:text="@string/profile_count_login_user"-->
-    <!--android:textColor="@color/text_small_blue"/>-->
-    <!--</RelativeLayout>-->
-
-    <!--<LinearLayout-->
-    <!--android:id="@+id/layout_feed_body"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@+id/layout_feed_details"-->
-    <!--android:gravity="center_vertical" android:orientation="horizontal"-->
-    <!--android:paddingLeft="@dimen/main_screen_padding"-->
-    <!--android:paddingRight="@dimen/main_screen_padding">-->
-    <!--<RelativeLayout-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_weight="1">-->
-    <!--<TextView-->
-    <!--android:id="@+id/txt_feed_body"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginTop="10dp"-->
-    <!--android:focusable="true"-->
-    <!--android:focusableInTouchMode="true"-->
-    <!--android:maxLines="5"-->
-    <!--android:text="@string/chinese_lorem_ipsum"-->
-    <!--android:textSize="@dimen/feed_body_text"/>-->
-    <!--</RelativeLayout>-->
-    <!--<RelativeLayout-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:layout_marginLeft="10dp"-->
-    <!--android:layout_weight="1.2"-->
-    <!--android:gravity="center">-->
-    <!--&lt;!&ndash;<ImageView&ndash;&gt;-->
-    <!--&lt;!&ndash;android:id="@+id/img_preview"&ndash;&gt;-->
-    <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
-    <!--&lt;!&ndash;android:layout_height="match_parent"&ndash;&gt;-->
-    <!--&lt;!&ndash;android:layout_centerInParent="true"/>&ndash;&gt;-->
-    <!--<FrameLayout-->
-    <!--android:id="@+id/progress_dialog"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent">-->
-
-    <!--<ProgressBar android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_gravity="center"/>-->
-
-    <!--<ImageView-->
-    <!--android:id="@+id/img_preview"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:layout_gravity="center"-->
-    <!--/>-->
-    <!--</FrameLayout>-->
-    <!--<RelativeLayout-->
-    <!--android:id="@+id/layout_img_video_preview"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:layout_centerInParent="true">-->
-    <!--<ImageView-->
-    <!--android:id="@+id/img_video_preview"-->
-    <!--android:layout_width="50dp"-->
-    <!--android:layout_height="50dp"-->
-    <!--android:layout_centerInParent="true"-->
-    <!--android:layout_marginBottom="5dp"-->
-    <!--android:layout_marginTop="5dp"-->
-    <!--android:src="@drawable/video_preview_icon"-->
-    <!--android:visibility="visible"/>-->
-
-    <!--</RelativeLayout>-->
-    <!--</RelativeLayout>-->
-    <!--</LinearLayout>-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/txt_seen"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@+id/layout_feed_body"-->
-    <!--android:layout_marginBottom="10dp"-->
-    <!--android:layout_marginTop="10dp"-->
-    <!--android:drawableLeft="@drawable/seen"-->
-    <!--android:drawablePadding="5dp"-->
-    <!--android:paddingLeft="@dimen/main_screen_padding"-->
-    <!--android:paddingRight="@dimen/main_screen_padding"-->
-    <!--android:text="3,027"-->
-    <!--android:textSize="12dp"/>-->
-
-    <!--<View-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="1dp"-->
-    <!--android:layout_below="@+id/txt_seen"-->
-    <!--android:layout_marginLeft="@dimen/main_screen_padding"-->
-    <!--android:layout_marginRight="@dimen/main_screen_padding"-->
-    <!--android:background="@color/view_color"/>-->
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@+id/txt_seen"
+            android:background="@color/view_color"/>
+    </RelativeLayout>
 </RelativeLayout>
