resolved the final bug of pull to refresh

--- a/App24/app/src/main/res/layout/fragment_latest.xml
+++ b/App24/app/src/main/res/layout/fragment_latest.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_alignParentTop="true"
     android:focusableInTouchMode="true"
     android:orientation="vertical">
@@ -10,7 +10,7 @@
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <!--<android.support.v7.widget.RecyclerView-->
         <!--android:id="@+id/list_latest_feeds"-->
@@ -19,14 +19,13 @@
         <!--android:clipToPadding="false"-->
         <!--android:scaleType="fitXY"-->
         <!--/>-->
-        <com.github.yasevich.endlessrecyclerview.EndlessRecyclerView
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/list_latest_feeds"
-            xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clipToPadding="false"
             android:orientation="vertical"
-            android:scaleType="fitXY"/>
+            />
 
 
     </android.support.v4.widget.SwipeRefreshLayout>
