--- a/App24/app/src/main/res/layout/fragment_most_viewed.xml
+++ b/App24/app/src/main/res/layout/fragment_most_viewed.xml
@@ -1,39 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_height="wrap_content"
               android:orientation="vertical">
     <!--
         <com.capstone.app24.custom.CustomTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/splash_app_heading"/>-->
-    <FrameLayout
+    <!--<FrameLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent">-->
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/swipeRefreshLayout"
+        <!--<android.support.v7.widget.RecyclerView-->
+        <!--android:id="@+id/most_viewed_feeds"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_marginTop="20dp"/>-->
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/most_viewed_feeds"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <!--<android.support.v7.widget.RecyclerView-->
-            <!--android:id="@+id/most_viewed_feeds"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_marginTop="20dp"/>-->
-            <com.github.yasevich.endlessrecyclerview.EndlessRecyclerView
-                android:id="@+id/most_viewed_feeds"
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent" android:layout_height="match_parent"
-                android:layout_marginTop="20dp"
-                android:clipToPadding="false"
-                android:orientation="vertical"
-                android:scaleType="fitXY"/>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:clipToPadding="false"
+            android:orientation="vertical"
+            />
 
 
-        </android.support.v4.widget.SwipeRefreshLayout>
-    </FrameLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
+    <!--</FrameLayout>-->
     <!--<ListView
         android:id="@+id/list_latest_feeds"
         android:layout_width="match_parent"
