--- a/App24/app/src/main/res/layout/fragment_latest.xml
+++ b/App24/app/src/main/res/layout/fragment_latest.xml
@@ -10,23 +10,17 @@
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:visibility="visible">
 
-        <!--<android.support.v7.widget.RecyclerView-->
-        <!--android:id="@+id/list_latest_feeds"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:clipToPadding="false"-->
-        <!--android:scaleType="fitXY"-->
-        <!--/>-->
         <android.support.v7.widget.RecyclerView
             android:id="@+id/list_latest_feeds"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clipToPadding="false"
-            android:orientation="vertical"
-            />
+            android:orientation="vertical"/>
 
 
     </android.support.v4.widget.SwipeRefreshLayout>
+
 </RelativeLayout>
